# pyelicit

./: .gitignore  README.md  pyproject.toml
pyelicit/: README.md  __init__.py  command_line.py  elicit.py  pyproject.toml
pyelicit/api/: elicit_api.py  elicit_creds.py
pyelicit/src/pyelicit/: command_line.py  elicit.py
pyelicit/src/pyelicit/api/: elicit_api.py  elicit_creds.py
pyelicit/tests/: test_elicit.py
tests/: test_elicit.py
