[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyelicit"
version = "0.1.2"
description = "Client library for using the Elicit experimentation system"
readme = "README.md"
authors = [
    { name = "iainbryson", email = "bryson.iain@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lorem>=0.1.1",
    "pandas>=2.2.3",
    "plotext>=5.3.2",
    "poetry-core>=1.0.0",
    "pyswagger>=0.8.39",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "sets>=0.3.2",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.2"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["pyelicit/tests"]
python_files = ["test_*.py"]
addopts = "-v -ra --strict-markers"
